Wed Dec 17 19:14:11 2003  Tim Janik  <timj@gtk.org>

	* bse/bsetype.h: allow options argument for Trigger pspecs.

Tue Dec 16 11:59:43 2003  Tim Janik  <timj@gtk.org>

	* bsecxxplugin.h: assign authors and license fields in BseExportNode.

	* bseexports.h: added authors and license fields.

	* bseitem.proc: provide get-type-authors() and get-type-license()
	procedures on items.

	* bseplugin.[hc]: register plugin authors and license with types.

	* bsetype.[hc]: provide bse_type_{add|get}_{blurb|authors|license}().
	_blurb variants got renamed, changed callers.

Tue Dec 16 02:16:25 2003  Tim Janik  <timj@gtk.org>

	* bsesong.c (bse_song_class_init): make playback properties skip-undo.

	* bseitem.c:
	* bseproject.c:
	* bsesource.c:
	* bsestorage.[hc]: removed BSE_STORAGE_SKIP_DEFAULTS flag and macro,
	since skipping default values is now indicated by the :skip-default:
	property option.

Mon Dec 15 22:42:37 2003  Tim Janik  <timj@gtk.org>

	* bsemidicontroller.c:
	* bsepcminput.c:
	* bsepcmoutput.c:
	* bsesong.c:
	* bsesource.c:
	* bsestandardosc.c:
	* bsemidiinput.c:
	* bsesubiport.c:
	* bsesuboport.c:
	* bsesubsynth.c:
	* bsesuper.c:
	* bsetrack.c:
	* bsemidisynth.c:
	* bseobject.c: flagged :skip-default: properties.

	* bseparam.c: make object properties skip-default automatically.

	* bseitem.c: skip undo recording for :skip-undo: properties.

	* bserecords.idl: provide SKIP_DEFAULT and SKIP_UNDO constants.

	* bsestorage.c: don't serialize defaulting :skip-default: properties.

	* bsetype.h: skip undo/redo for :trigger: properties.

Mon Dec 15 21:16:49 2003  Tim Janik  <timj@gtk.org>

	* bseundostack.h: remove 64bit fields from BseUndoStep data union and
	added long/ulong fields to reduce memory usage on 32bit systems.

	* bseitem.c: 
	* bsecontainer.c: use v_long/v_ulong data fields in BseUndoStep.

Mon Dec 15 16:00:48 2003  Tim Janik  <timj@gtk.org>

	* bseamplifier.idl: stripped "/Module" prefix from categories as this